--- a/src/FamilyBundle/Resources/views/Default/map.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/map.html.twig
@@ -16,33 +16,22 @@
     <h1>Maps Events :</h1>
 
     <div>Reel event</div></div>
-     {#<hr />#}
+
     <div id="map" class="row center col s12 m6 l6 offset-l3"></div>
-     {#<hr />#}
+
 
     <div id="save-widget">
-        <strong>Google Sydney</strong>
-        <p>We’re located on the water in Pyrmont, with views of the Sydney Harbour Bridge, The
-            Rocks and Darling Harbour. Our building is the greenest in Sydney. Inside, we have a
-            "living wall" made of plants, a tire swing, a library with a nap pod and some amazing
-            baristas.</p>
+        <strong>WILD CODE SCHOOL</strong>
+        <p>35 Rue Saint-Honoré, Fontainebleau</p>
     </div>
 
  <script>
-/*
- * This sample uses a custom control to display the SaveWidget. Custom
- * controls can be used in place of the default Info Window to create a
- * custom UI.
- * This sample uses a Place ID to reference Google Sydney. Place IDs are
- * stable values that uniquely reference a place on a Google Map and are
- * documented in detail at:
- * https://developers.google.com/maps/documentation/javascript/places#placeid
- */
+
 
 function initMap() {
   var map = new google.maps.Map(document.getElementById('map'), {
     zoom: 17,
-    center: {lat: -33.8666, lng: 151.1958},
+    center: {lat: 48.4037449, lng: 2.6921273},
     mapTypeControlOptions: {
       mapTypeIds: [
         google.maps.MapTypeId.ROADMAP,
@@ -60,9 +49,9 @@ function initMap() {
   // Append a Save Control to the existing save-widget div.
   var saveWidget = new google.maps.SaveWidget(widgetDiv, {
     place: {
-      // ChIJN1t_tDeuEmsRUsoyG83frY4 is the place Id for Google Sydney.
-      placeId: 'ChIJN1t_tDeuEmsRUsoyG83frY4',
-      location: {lat: -33.866647, lng: 151.195886}
+
+      placeId: 'ChIJY2CoQ4b05UcRQX3_jMJUvPU',
+      location: {lat: 48.4037449, lng: 2.6942000}
     },
     attribution: {
       source: 'Google Maps JavaScript API',
@@ -70,20 +59,30 @@ function initMap() {
     }
   });
 
+
+
+
   var marker = new google.maps.Marker({
     map: map,
     position: saveWidget.getPlace().location
 
   });
 
+// Construct a new InfoWindow.
+    var infoWindow = new google.maps.InfoWindow({
+        content: 'Wild Code School'
+    });
+
+    // Opens the InfoWindow when marker is clicked.
+    marker.addListener('click', function() {
+        infoWindow.open(map, marker);
+    });
+
+
 
 }
 
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=<var class="apiparam replaceable-credential">AIzaSyC7hklkFjuJH0suuR_ni4Jl7_sPnjHEfPk</var>&callback=initMap&signed_in=true" async defer>
-    </script>
-
-
+</script>
 
     {% include "@Family/Default/footer.html.twig"  %}
 
