--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -86,7 +86,7 @@ nav {
 }
 
 #save-widget {
-    width: 300px;
+    width: 200px;
     box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
     background-color: white;
     padding: 10px;
@@ -94,6 +94,29 @@ nav {
     font-size: 13px;
     margin: 15px;
 }
+
+/*.controls {*/
+    /*background-color: #fff;*/
+    /*border-radius: 2px;*/
+    /*border: 1px solid transparent;*/
+    /*box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);*/
+    /*box-sizing: border-box;*/
+    /*font-family: Roboto;*/
+    /*font-size: 15px;*/
+    /*font-weight: 300;*/
+    /*height: 29px;*/
+    /*margin-left: 17px;*/
+    /*margin-top: 10px;*/
+    /*outline: none;*/
+    /*padding: 0 11px 0 13px;*/
+    /*text-overflow: ellipsis;*/
+    /*width: 400px;*/
+/*}*/
+
+/*.controls:focus {*/
+    /*border-color: #4d90fe;*/
+/*}*/
+
 
 /*4-FullCalendar *****************************************************/
 #calendar {
@@ -131,6 +154,12 @@ a:active {
 /*6-Image ***********************************************************/
 
 .imgmenu
+{
+    width: 60px;
+    height: 60px;
+}
+
+.imgmenu2
 {
     width: 60px;
     height: 60px;
