--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
         <!--Import materialize.css-->
         {#<link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/fingerpaint.min.css') }}">#}
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
-
+        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
 
 
 	    {% endblock %}
