--- a/src/FamilyBundle/Resources/views/Default/map.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/map.html.twig
@@ -64,7 +64,7 @@ function initMap() {
 
   var marker = new google.maps.Marker({
     map: map,
-    position: saveWidget.getPlace().location
+    position: saveWidget.getPlace().location,
 
   });
 
@@ -81,7 +81,6 @@ function initMap() {
 
 
 }
-
 </script>
 
     {% include "@Family/Default/footer.html.twig"  %}
