--- a/app/Resources/TwigBundle/views/Exception/error400.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error400.html.twig
@@ -2,11 +2,12 @@
 
 {% block body%}
 
-    <div class="container amber-text center msg-error ">
+    <div class="container red-text center msg-error ">
         <div class="row">
             <div class="col s12">
-                <h1>OOOOPSS ! Une érreur a été détectée</h1>
+                <h1>OOOOPSS 404!<br> Une érreur a été détectée</h1>
             </div>
+            <img src="{{ asset('bundles/family/images/down.png') }}"  alt="404">
         </div>
 
         <div class="row">
@@ -19,7 +20,7 @@
         <div class="row">
             <div class="col s12">
                 <p>
-                    Quelque chose est cassé. Veuillez nous faire savoir ce que vous faisiez lorsque cette erreur s'est produite.
+                    Quelque chose est cassé. <br>Veuillez nous faire savoir ce que vous faisiez lorsque cette erreur s'est produite.<br>
                     Nous allons le réparer dès que possible. Désolé pour tout inconvénient causé.
                 </p>
                 <p>
