--- a/src/FamilyBundle/Resources/views/Default/calendar.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/calendar.html.twig
@@ -4,12 +4,8 @@
 {% block stylesheet %}
 {{ parent() }}
 
-
 <link rel="stylesheet" href="{{ asset('bundles/family/css/fullcalendar.min.css') }}">
-<link rel="stylesheet" media="print" href="{{ asset('bundles/family/css/fullcalendar.print.min.css') }}">
 <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/calendar_main.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/main.css') }}">
-
 
 {% endblock %}
 
@@ -25,33 +21,36 @@
 
 	<div id='calendar'></div>
 
-	<div id="fullCalModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
-					<h6 style="color:white" id="modalTime" class="modal-title"></h6>
-				</div>
-				<div class="modal-header">
-					<h6 style="color: white" id="modalTitle" class="modal-title"></h6>
-				</div>
-
-				<div style="color:white" id="modalBody" class="modal-body">
-					<p id="text_event"></p>
-					<div id="imgevent"></div>
-				</div>
-				<div class="modal-footer">
-					{#{% if is_granted("ROLE_SUPER_ADMIN") %}#}
-						<a href="#" id="delete_event" class="btn btn-default">Supprimer</a>
-						<a href="#" id="edit_event" class="btn btn-primary">Modifier</a>
-					{#{% endif %}#}
-				</div>
-			</div>
+	<!-- Modal Structure -->
+	<div id="fullCalModal" class="modal modal-fixed-footer">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
+			<h6 style="color:white" id="modalTime" class="modal-title"></h6>
+		</div>
+		<div class="modal-header">
+			<h6 style="color: white" id="modalTitle" class="modal-title"></h6>
+		</div>
+		<div class="modal-content">
+			<h4>Modal Header</h4>
+			<p>A bunch of text</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#" id="delete_event" class="btn btn-default">Supprimer</a>
+			<a href="#" id="edit_event" class="btn btn-primary">Modifier</a>
 		</div>
 	</div>
-
+	<a class="waves-effect waves-light btn" href="#fullCalModal">Modal</a>
 
 	{% include "@Family/Default/footer.html.twig"  %}
 
 {% endblock %}
 
+{% block js %}
+	{{ parent() }}
+
+	<script src="{{ asset('bundles/family/js/moment.min.js') }}"></script>
+	<script src="{{ asset('bundles/family/js/fullcalendar.min.js') }}"></script>
+	<script src="{{ asset('bundles/family/js/calendar_main.js') }}"></script>
+	<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+	<script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
+{% endblock %}
