--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -37,7 +37,6 @@ footer{
     font-size: 18px !important;
     font-family: Verdana, Geneva, sans-serif;
     color: #333;
-    /*background-color: ;*/
     height: 20px;
     line-height: 20px;
     vertical-align: middle;
@@ -95,33 +94,19 @@ nav {
     margin: 15px;
 }
 
-/*.controls {*/
-    /*background-color: #fff;*/
-    /*border-radius: 2px;*/
-    /*border: 1px solid transparent;*/
-    /*box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);*/
-    /*box-sizing: border-box;*/
-    /*font-family: Roboto;*/
-    /*font-size: 15px;*/
-    /*font-weight: 300;*/
-    /*height: 29px;*/
-    /*margin-left: 17px;*/
-    /*margin-top: 10px;*/
-    /*outline: none;*/
-    /*padding: 0 11px 0 13px;*/
-    /*text-overflow: ellipsis;*/
-    /*width: 400px;*/
-/*}*/
 
-/*.controls:focus {*/
-    /*border-color: #4d90fe;*/
-/*}*/
 
 
 /*4-FullCalendar *****************************************************/
 #calendar {
     max-width: 900px;
     margin: 0 auto;
+}
+
+#fullCalModal {
+    width: 450px;
+    height: 450px;
+    border-radius: 22px;
 }
 
 /*5-A Link ***********************************************************/
