--- a/src/FamilyBundle/Resources/views/event/edit.html.twig
+++ b/src/FamilyBundle/Resources/views/event/edit.html.twig
@@ -37,13 +37,15 @@
         </div>
     </div>
 </div>
-
-    <ul>
-        <li>
-            <a href="{{ path('family_calendar') }}">Retourner au calendrier</a>
-        </li>
-    </ul>
-
+<div class="row">
+    <div class="col s12 center">
+        <ul>
+            <li>
+             <a href="{{ path('family_calendar') }}">Retourner au calendrier</a>
+            </li>
+        </ul>
+    </div>
+</div>
     {% include "@Family/Default/footer.html.twig"  %}
 {% endblock %}
 
