--- a/src/FamilyBundle/Resources/views/event/new.html.twig
+++ b/src/FamilyBundle/Resources/views/event/new.html.twig
@@ -29,6 +29,7 @@
                     {{ form_widget(form.color, {'id': 'colorpicker'}) }}
                     {{ form_errors(form.color) }}
                 </div>
+                {#<i class="material-icons md-48 bouton-edit">create</i>#}
                 <input type="submit" value="Créer" />
                 {{ form_end(form) }}
 
