--- a/src/FamilyBundle/Resources/views/Default/calendar.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/calendar.html.twig
@@ -19,20 +19,27 @@
 
 	<div id='calendar'></div>
 
+
+
+
+
 	<div class="row">
 		<div class="col s12 center">
 			<!-- Modal Structure -->
 			<div id="fullCalModal" class="modal modal-corps">
 
 				<div class="modal-header">
-					<h6 style="color:white" id="modalTime" class="modal-title"></h6>
+					<h6 style="color:blue" id="modalTime" class="modal-title"></h6>
+					<h5 id="modalTitle" class="modal-title"></h5>
 				</div>
 
 				<div class="modal-content">
-					<h4>Modal Header</h4>
-					<p>A bunch of text</p>
+
+					<h6 id="modalTime" class="modal-body"></h6>
 				</div>
 				<div class="modal-footer">
+
+						{#<i class="material-icons md-48 bouton-delete">delete_sweep</i>#}
 					<a href="#" id="delete_event" class="btn btn-default">Supprimer</a>
 					<a href="#" id="edit_event" class="btn btn-primary">Modifier</a>
 				</div>
