--- a/src/FamilyBundle/Resources/views/Default/map.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/map.html.twig
@@ -10,6 +10,68 @@
 
 {% block body %}
 
+    <style>
+        .gm-style-iw {
+            width: 270px !important;
+            top: 15px !important;
+            left: 0px !important;
+            background-color: #fff;
+            box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
+            border: 1px solid #03C9A9;
+            border-radius: 2px 2px 10px 10px;
+        }
+
+        .gm-style-iw p, .gm-style-iw a{
+            color: #000;
+        }
+        #iw-container {
+            margin-bottom: 10px;
+        }
+        #iw-container .iw-title {
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 22px;
+            font-weight: 400;
+            padding: 10px;
+            background-color: #03C9A9;
+            color: white;
+            margin: 0;
+            border-radius: 2px 2px 0 0;
+            width: 270px;
+        }
+        #iw-container .iw-content {
+            font-size: 13px;
+            line-height: 18px;
+            font-weight: 400;
+            margin-right: 1px;
+            padding: 15px 5px 20px 15px;
+            max-height: 200px;
+            overflow-y: auto;
+            overflow-x: hidden;
+        }
+        .iw-content img {
+            float: right;
+            margin: 0 5px 5px 10px;
+            /*height: 115px !important;*/
+            width: 100% !important;
+        }
+        .iw-subTitle {
+            font-size: 16px;
+            font-weight: 700;
+            padding: 5px 0;
+        }
+        .iw-bottom-gradient {
+            position: absolute;
+            width: 326px;
+            height: 25px;
+            bottom: 10px;
+            right: 18px;
+            background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+            background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+            background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+            background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+        }
+    </style>
+
     {% include "@Family/Default/nav.html.twig"  %}
 
 <div class="row center col s12 m6 l6 offset-l3">
@@ -25,76 +87,206 @@
         <p>35 Rue Saint-Honoré, Fontainebleau</p>
     </div>
 
- <script>
+ {#<script>#}
 
 
-function initMap() {
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 17,
-    center: {lat: 48.4037449, lng: 2.6921273},
-    mapTypeControlOptions: {
-      mapTypeIds: [
-        google.maps.MapTypeId.ROADMAP,
-        google.maps.MapTypeId.SATELLITE
-      ],
-      position: google.maps.ControlPosition.BOTTOM_LEFT
-    }
+{#function initMap() {#}
+  {#var map = new google.maps.Map(document.getElementById('map'), {#}
+    {#zoom: 17,#}
+    {#center: {lat: 48.4037449, lng: 2.6921273},#}
+    {#mapTypeControlOptions: {#}
+      {#mapTypeIds: [#}
+        {#google.maps.MapTypeId.ROADMAP,#}
+        {#google.maps.MapTypeId.SATELLITE#}
+      {#],#}
+      {#position: google.maps.ControlPosition.BOTTOM_LEFT#}
+    {#}#}
 
-  });
-
-
-  var widgetDiv = document.getElementById('save-widget');
-  map.controls[google.maps.ControlPosition.TOP_LEFT].push(widgetDiv);
-
-  // Append a Save Control to the existing save-widget div.
-  var saveWidget = new google.maps.SaveWidget(widgetDiv, {
-    place: {
-
-      placeId: 'ChIJY2CoQ4b05UcRQX3_jMJUvPU',
-      location: {lat: 48.4037449, lng: 2.6942000}
-    },
-    attribution: {
-      source: 'Google Maps JavaScript API',
-      webUrl: 'https://developers.google.com/maps/'
-    }
-  });
-
-//    https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR0BbHRUnLKTDjKllsr4gMZkF_l8GZXfFE_Ws5C68MHMY1H1Jsk
-
-    var markerImage= new google.maps.MarkerImage(
-            "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR0BbHRUnLKTDjKllsr4gMZkF_l8GZXfFE_Ws5C68MHMY1H1Jsk",
-            null, /* size is determined at runtime */
-            null, /* origin is 0,0 */
-            null, /* anchor is bottom center of the scaled image */
-            new google.maps.Size(42, 42)
-    );
-    var marker = new google.maps.Marker({
-    map: map,
-    icon: markerImage,
-    position: saveWidget.getPlace().location,
-
-  });
-
-// Construct a new InfoWindow.
-    var infoWindow = new google.maps.InfoWindow({
-        content: 'Wild Code School'
-    });
-
-    // Opens the InfoWindow when marker is clicked.
-    marker.addListener('click', function() {
-        infoWindow.open(map, marker);
-    });
+  {#});#}
 
 
+  {#var widgetDiv = document.getElementById('save-widget');#}
+  {#map.controls[google.maps.ControlPosition.TOP_LEFT].push(widgetDiv);#}
 
-}
-</script>
+  {#// Append a Save Control to the existing save-widget div.#}
+  {#var saveWidget = new google.maps.SaveWidget(widgetDiv, {#}
+    {#place: {#}
+
+      {#placeId: 'ChIJY2CoQ4b05UcRQX3_jMJUvPU',#}
+      {#location: {lat: 48.4037449, lng: 2.6942000}#}
+    {#},#}
+    {#attribution: {#}
+      {#source: 'Google Maps JavaScript API',#}
+      {#webUrl: 'https://developers.google.com/maps/'#}
+    {#}#}
+  {#});#}
+
+{#//    https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR0BbHRUnLKTDjKllsr4gMZkF_l8GZXfFE_Ws5C68MHMY1H1Jsk#}
+
+    {#var markerImage= new google.maps.MarkerImage(#}
+            {#"https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR0BbHRUnLKTDjKllsr4gMZkF_l8GZXfFE_Ws5C68MHMY1H1Jsk",#}
+            {#null, /* size is determined at runtime */#}
+            {#null, /* origin is 0,0 */#}
+            {#null, /* anchor is bottom center of the scaled image */#}
+            {#new google.maps.Size(42, 42)#}
+    {#);#}
+    {#var marker = new google.maps.Marker({#}
+    {#map: map,#}
+    {#icon: markerImage,#}
+    {#position: saveWidget.getPlace().location,#}
+
+  {#});#}
+
+    {#{% for user in users %}#}
+
+        {#var lat = {{ user.lat }};#}
+        {#var lng = {{ user.lng }};#}
+
+        {#var marker = new google.maps.Marker({#}
+            {#map: map,#}
+            {#icon: markerImage,#}
+            {#position: {lat: lat, lng: lng }#}
+        {#});#}
+
+        {#// Construct a new InfoWindow.#}
+        {#var infoWindow = new google.maps.InfoWindow({#}
+            {#content: '{{ user.prenom ~ user.nom }}'#}
+        {#});#}
+
+        {#// Opens the InfoWindow when marker is clicked.#}
+        {#marker.addListener('click', function() {#}
+            {#infoWindow.open(map, marker);#}
+        {#});#}
+    {#{% endfor %}#}
+
+
+
+
+
+{#}#}
+{#</script>#}
 
     {% include "@Family/Default/footer.html.twig"  %}
 
 
 {% endblock %}
 {% block js %}
+
+    <script>
+
+        var map;
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: 48.4037449, lng: 2.6921273},
+                zoom: 15
+            });
+            codeAddress();
+        }
+        // function initialize() {
+
+        function codeAddress() {
+            var imageMarqueur = {
+                url: "{{ asset('bundles/family/images/MapMarker_PushPin1__Azure.png') }}",
+                size: new google.maps.Size(25, 40),
+                anchor: new google.maps.Point(0, 20)
+            };
+            {% for user in users %}
+
+            var lat = {{ user.lat }};
+            var lng = {{ user.lng }};
+
+            var marker = new google.maps.Marker({
+                map: map,
+                icon: imageMarqueur,
+                position: {lat: lat, lng: lng }
+            });
+
+            {#var description =#}
+            {#'<div id="iw_container">'+#}
+            {#'<div class="iw_title">{{ commercant.nom }}</div>'+#}
+            {#'<div class="iw_content">'+#}
+            {#'<p>{{ commercant.adresse }}</p>'+#}
+            {#'<a href="{{ commercant.lien | external_link }}" target="_blank" class="read-more">En savoir plus</a>'+#}
+            {#'</div>'+#}
+            {#'</div>';#}
+
+            var description =
+                '<div id="iw-container">' +
+                '<div class="iw-title">{{ user.prenom }} {{ user.nom }}</div>' +
+                '<div class="iw-content">' +
+                '<div class="iw-subTitle">Contacts</div>' +
+                '<p>{{ user.adresse }}<br>{{ user.ville }}<br>'+
+                '{{ user.portable }}'+
+                '</div>' +
+                '<div class="iw-bottom-gradient"></div>' +
+                '</div>';
+
+            var infoWindow = new google.maps.InfoWindow();
+            //Attach click event to the marker.
+            (function (marker, description) {
+                google.maps.event.addListener(marker, "click", function (e) {
+                    //Wrap the content inside an HTML DIV in order to set height and width of InfoWindow.
+                    infoWindow.setContent(description);
+                    infoWindow.open(map, marker);
+                });
+
+                google.maps.event.addListener(map, 'click', function() {
+                    infoWindow.close();
+                });
+            })(marker, description);
+
+            google.maps.event.addListener(infoWindow, 'domready', function() {
+
+                // Reference to the DIV that wraps the bottom of infowindow
+                var iwOuter = $('.gm-style-iw');
+
+                /* Since this div is in a position prior to .gm-div style-iw.
+                 * We use jQuery and create a iwBackground variable,
+                 * and took advantage of the existing reference .gm-style-iw for the previous div with .prev().
+                 */
+                var iwBackground = iwOuter.prev();
+
+                // Removes background shadow DIV
+                iwBackground.children(':nth-child(2)').css({'display' : 'none'});
+
+                // Removes white background DIV
+                iwBackground.children(':nth-child(4)').css({'display' : 'none'});
+
+                // Moves the infowindow 115px to the right.
+                iwOuter.parent().parent().css({left: '74px'});
+
+                // Moves the shadow of the arrow 76px to the left margin.
+                iwBackground.children(':nth-child(1)').attr('style', function(i,s){ return s + 'left: 76px !important;'});
+
+                // Moves the arrow 76px to the left margin.
+                iwBackground.children(':nth-child(3)').attr('style', function(i,s){ return s + 'left: 76px !important;'});
+
+                // Changes the desired tail shadow color.
+                iwBackground.children(':nth-child(3)').find('div').children().css({'box-shadow': 'rgba(72, 181, 233, 0.6) 0px 1px 6px', 'z-index' : '1'});
+
+                // Reference to the div that groups the close button elements.
+                var iwCloseBtn = iwOuter.next();
+
+                // Apply the desired effect to the close button
+                iwCloseBtn.css({opacity: '1', right: '38px', top: '3px', border: '7px solid #48b5e9', 'border-radius': '13px', 'box-shadow': '0 0 5px #3990B9'});
+
+                // If the content of infowindow not exceed the set maximum height, then the gradient is removed.
+                if($('.iw-content').height() < 140){
+                    $('.iw-bottom-gradient').css({display: 'none'});
+                }
+
+                // The API automatically applies 0.7 opacity to the button after the mouseout event. This function reverses this event to the desired value.
+                iwCloseBtn.mouseout(function(){
+                    $(this).css({opacity: '1'});
+                });
+            });
+
+            {% endfor %}
+
+        }
+
+    </script>
 
     <script type="text/javascript" src="{{ asset('bundles/family/js/main.js') }}"></script>
     <script async defer
